@@ -11,6 +11,7 @@ EXTRA_DIST = 				\
 	test_common_componentui.py 	\
 	test_common_gstreamer.py 	\
 	test_common_planet.py	 	\
+	test_common_pygobject.py 	\
 	test_component.py 		\
 	test_config.py 			\
 	test_credentials.py 		\
